--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -2,8 +2,12 @@ ja:
   activerecord:
     models:
       user: ユーザ
+      article: 記事
     attributes:
       user:
         email: メールアドレス
         password: パスワード
         password_confirmation: パスワード(確認)
+      article:
+        title: タイトル
+        body: 本文
